Add nodeSelector to deployment
Useful in a mixed cluster scenario as seen in the example values.yaml

--- a/charts/vsts-agent/templates/vsts-agent.yaml
+++ b/charts/vsts-agent/templates/vsts-agent.yaml
@@ -67,6 +67,8 @@ spec:
 {{ if .Values.extraContainers }}
 {{ toYaml .Values.extraContainers | indent 6 }}
 {{ end }}
+      nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 8 }}
       volumes:
 {{ toYaml .Values.volumes | indent 8 }}
 {{ if .Values.image.imagePullSecret }}
