--- a/charts/vsts-agent/values.yaml
+++ b/charts/vsts-agent/values.yaml
@@ -27,6 +27,9 @@ volumes:
   hostPath:
     path: /var/run/docker.sock
 
+nodeSelector:
+  beta.kubernetes.io/os: linux
+
 extraEnv: {}
 extraContainers: []
 extraVolumeClaimTemplates: []
