--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,7 +2,18 @@ apiVersion: v1
 entries:
   vsts-agent:
   - apiVersion: v1
-    created: 2018-10-05T16:06:09.742522+01:00
+    created: "2019-07-24T23:51:19.615775+01:00"
+    description: Helm chart for Visual Studio Team Services agent pool
+    digest: 1baf8d71ae27594b0d0bf8403531b9cd3502fb901761de96c201d9ead1d834d2
+    maintainers:
+    - email: msefoundations@microsoft.com
+      name: Microsoft Social Engagement
+    name: vsts-agent
+    urls:
+    - vsts-agent-1.0.1.tgz
+    version: 1.0.1
+  - apiVersion: v1
+    created: "2019-07-24T23:51:19.615516+01:00"
     description: Helm chart for Visual Studio Team Services agent pool
     digest: c13c24fad551693836f3f36188917230b861eb4ca10f4ba8aee38cf68d55151f
     maintainers:
@@ -12,4 +23,4 @@ entries:
     urls:
     - vsts-agent-1.0.0.tgz
     version: 1.0.0
-generated: 2018-10-05T16:06:09.741511+01:00
+generated: "2019-07-24T23:51:19.61398+01:00"
