--- a/charts/vsts-agent/templates/vsts-agent.yaml
+++ b/charts/vsts-agent/templates/vsts-agent.yaml
@@ -43,6 +43,8 @@ spec:
             value: {{ .vstsWorkspace | default "/workspace" }}
           - name: AZP_URL
             value: {{ .azurePipelinesURL | default "" }}
+          - name: AZP_POOL
+            value: {{ .vstsPool | default "kubernetes-vsts-agents" }}
           - name: AZP_AGENT_NAME
             value: {{ .vstsAgentName | default "$HOSTNAME" }}
          {{- end }}
