--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,7 +2,18 @@ apiVersion: v1
 entries:
   vsts-agent:
   - apiVersion: v1
-    created: "2019-11-07T16:31:52.394649Z"
+    created: "2020-07-02T14:56:30.685537+01:00"
+    description: Helm chart for Visual Studio Team Services agent pool
+    digest: da81de93ff6e623419af5a253fbc3bb3a9182c7064c8ad1d98599485641e0e6f
+    maintainers:
+    - email: msefoundations@microsoft.com
+      name: Microsoft Social Engagement
+    name: vsts-agent
+    urls:
+    - vsts-agent-1.0.3.tgz
+    version: 1.0.3
+  - apiVersion: v1
+    created: "2020-07-02T14:56:30.685329+01:00"
     description: Helm chart for Visual Studio Team Services agent pool
     digest: 2708c4a43a8bc490cc5a0e1533d28017cdca86e2b8392585694ead493790e65d
     maintainers:
@@ -13,7 +24,7 @@ entries:
     - vsts-agent-1.0.2.tgz
     version: 1.0.2
   - apiVersion: v1
-    created: "2019-11-07T16:31:52.394276Z"
+    created: "2020-07-02T14:56:30.685118+01:00"
     description: Helm chart for Visual Studio Team Services agent pool
     digest: 1baf8d71ae27594b0d0bf8403531b9cd3502fb901761de96c201d9ead1d834d2
     maintainers:
@@ -24,7 +35,7 @@ entries:
     - vsts-agent-1.0.1.tgz
     version: 1.0.1
   - apiVersion: v1
-    created: "2019-11-07T16:31:52.393572Z"
+    created: "2020-07-02T14:56:30.684898+01:00"
     description: Helm chart for Visual Studio Team Services agent pool
     digest: c13c24fad551693836f3f36188917230b861eb4ca10f4ba8aee38cf68d55151f
     maintainers:
@@ -34,4 +45,4 @@ entries:
     urls:
     - vsts-agent-1.0.0.tgz
     version: 1.0.0
-generated: "2019-11-07T16:31:52.386264Z"
+generated: "2020-07-02T14:56:30.684146+01:00"
